Fixed column z-index

--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -10,6 +10,11 @@
   transform: translateY(50px);
   transition: $anim-slow opacity $ease-decel, $anim-slow transform $ease-decel;
 
+  &--columns {
+    position: relative;
+    z-index: 10;
+  }
+
   &.-active {
     opacity: 1;
     transform: translateY(0);
